Fixed CSS for Edit Quote scrollbar appearing

--- a/src/Components/SearchPage/EditQuoteComponents/EditQuoteForm.css
+++ b/src/Components/SearchPage/EditQuoteComponents/EditQuoteForm.css
@@ -9,7 +9,7 @@
 
 .EditQuotesInput-FormArea{
     margin: auto;
-    width: fit-content;
+    width: 40vw;
     height: 60vh;
     /* background-color: #1c1c1c; */
     background-color: #2c2c2c;
@@ -36,6 +36,7 @@ input::placeholder{
 
 .EditQuotesInput-quoteDiv{
     height: fit-content;
+    width: 90%;
 }
 
 .EditQuotesInput-quoteLabel{
@@ -54,8 +55,7 @@ input::placeholder{
 .EditQuotesInput-authorDiv{
     padding-top: 1vh;
     height: fit-content;
-    width: 100%;
-
+    width: 90%;
 }
 .EditQuotesInput-authorLabel{
     width: 100%;
@@ -75,7 +75,7 @@ input::placeholder{
 .EditQuotesInput-sourceDiv{
     padding-top: 1vh;
     height: fit-content;
-    width: inherit;
+    width: 90%;
 }
 
 .EditQuotesInput-sourceLabel{
